# src/Admin/Admin.Web/src/api/client.ts
@@ -11,6 +11,8 @@ export type EnvironmentPage = Page<components['schemas']['Environment']>;
 export type InstallationPage = Page<components['schemas']['Installation']>;
 export type GrantPage = Page<components['schemas']['Grant']>;
 export type AuditPage = Page<components['schemas']['AuditEvent']>;
+export type AuditEvent = components['schemas']['AuditEvent'];
+export type SafeFailureDiagnostics = components['schemas']['SafeFailureDiagnostics'];
 export type ConnectorSummary = components['schemas']['ConnectorSummary'];
 export type Installation = components['schemas']['Installation'];
 export type Environment = components['schemas']['Environment'];
